--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vladyslavhurzhyi.github.io/goit-react-hw-06-phonebook/",
+  "homepage": "https://vladyslavhurzhyi.github.io/engcards/",
   "dependencies": {
     "@emotion/styled": "^11.10.5",
     "@reduxjs/toolkit": "^1.9.1",
@@ -16,6 +16,10 @@
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "react-swipe": "^6.0.4",
+    "styled-components": "^5.3.6",
+    "swipe-js-iso": "^2.1.5",
+    "translate-google-api": "^1.0.4",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
