--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "react-homework-template",
+  "name": "englishflip",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vladyslavhurzhyi.github.io/engcards/",
+  "homepage": "https://vladyslavhurzhyi.github.io/englishflip/",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "formik": "^2.2.9",
-    "nanoid": "^3.3.2",
+    "axios": "^1.2.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-redux": "^8.0.5",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
-    "redux-persist": "^6.0.0",
     "react-swipe": "^6.0.4",
     "styled-components": "^5.3.6",
     "swipe-js-iso": "^2.1.5",
